[package]
name = "my_erc721"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }
scale = "3"
scale-info = { version = "2", features = ["derive"], default-features = false }

[lib]
name = "my_erc721"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
