[package]
name = "my_erc721"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
name = "my_erc721"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
